fix projects page on mobile browsers

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -15,6 +15,12 @@
     width: 90vw;
 }
 
+@media (max-width: 180ch) {
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
 .projects-grid > div {
     border: 1px solid var(--main-color);
     padding: 1rem;
@@ -27,4 +33,5 @@
     color: oklch(0.7 0.1927 342);
     text-shadow: 0px 0px var(--text-shadow-size) oklch(0.7 0.1927 342);
     font-style: italic;
+    flex-wrap: wrap;
 }
